# minesweeper-extreme-wctf

./: README.md
challenge/: description.txt  minesweeper-rs.bat
solution/: sol.py  solution.txt
source/minesweeper-extreme/: Cargo.toml
source/minesweeper-extreme/bindings/: build.rs
source/minesweeper-extreme/src/: comp_ui.rs  main.rs  minesweeper.rs
