[package]
name = "minesweeper-rs"
version = "0.1.0"
authors = ["Robert Mikhayelyan <rob.mikh@outlook.com>"]
edition = "2018"

[dependencies]
winit = "0.22.0"
raw-window-handle = "0.3.3"
winrt = "0.7.0"
rand = "0.7.3"
bindings = { path = "bindings" }
log = "0.4"
env_logger = "0.8"

[features]
show-mines = []
